--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -602,33 +602,42 @@
     "title": "எங்கள் சமூகத்தின் குரல்"
   },
   "dashboard": {
-    "header": "டாஷ்போர்ட்",
     "logout": "வெளியேறு",
-    "blogsTitle": "சமீபத்திய பதிவுகள்",
-    "galleryTitle": "புகைப்பட கேலரி",
-    "testimonialsTitle": "எங்கள் உறுப்பினர்கள் என்ன சொல்கிறார்கள்",
-    "blogs": [
-      {
-        "title": "உள்ளடக்கம்",
-        "content": "ஜிஹ்ஜிஇஹ்ஜ்இஹ்ஜ்ஃ ஜிப்ஜெஉவ்ஃவிஹெப்ஃ இஜிஇஹ்ஜிஹ்ஜிஇஃஜ்"
-      }
-    ],
-    "gallery": [
-      {
-        "title": "வணக்கம்"
-      }
-    ],
-    "testimonials": [
-      {
-        "name": "சுந்தர் ராஜன்",
-        "comment": "இந்த சேவை என் எதிர்பார்ப்புகளை மீறியது. சிறந்த ஆதரவு குழு!"
-      },
-      {
-        "name": "பிரியா எம்.",
-        "comment": "மிகவும் தொழில்முறை மற்றும் நண்பனான அனுபவம். மிகுந்த பரிந்துரை!"
-      }
-    ]
+    "postBlog": "பதிவை இடு",
+    "blogTitle": "பதிவு தலைப்பு",
+    "blogContent": "பதிவு உள்ளடக்கம்",
+    "blogImage": "பதிவுக்கான படம்",
+    "updateBlog": "பதிவை புதுப்பி",
+    "posting": "பதிவிடப்படுகிறது...",
+    "updating": "புதுப்பிக்கப்படுகிறது...",
+    "blogSaved": "பதிவு வெற்றிகரமாக சேமிக்கப்பட்டது!",
+    "blogFailed": "பதிவை சேமிக்க முடியவில்லை.",
+    "enterTitleContent": "தயவுசெய்து தலைப்பும் உள்ளடக்கமும் உள்ளிடவும்.",
+    "blogDeleted": "பதிவு நீக்கப்பட்டது.",
+    "allBlogs": "அனைத்து பதிவுகள்",
+    "noBlogs": "இன்னும் எந்த பதிவும் இடப்படவில்லை.",
+    "edit": "தொகு",
+    "delete": "நீக்கு",
+    "gallery": "கேலரி",
+    "galleryTitle": "கேலரி பட தலைப்பு",
+    "galleryUpload": "கேலரி படத்தை பதிவேற்று",
+    "uploadToGallery": "கேலரிக்கு பதிவேற்று",
+    "selectImage": "தயவுசெய்து ஒரு படத்தைத் தேர்வுசெய்யவும்.",
+    "uploadingImage": "படம் பதிவேற்றப்படுகிறது...",
+    "imageUploaded": "படம் வெற்றிகரமாக பதிவேற்றப்பட்டது!",
+    "imageUploadFailed": "படத்தை பதிவேற்ற முடியவில்லை.",
+    "testimonials": "சான்றுகள்",
+    "testimonialName": "உங்கள் பெயர்",
+    "testimonialComment": "உங்கள் கருத்து",
+    "uploadTestimonial": "கருத்தை சமர்ப்பிக்கவும்",
+    "testimonialAdded": "கருத்து சேர்க்கப்பட்டது.",
+    "testimonialFailed": "கருத்தை சேர்க்க முடியவில்லை.",
+    "enterTestimonial": "தயவுசெய்து பெயரும் கருத்தும் உள்ளிடவும்.",
+    "testimonialDeleted": "கருத்து நீக்கப்பட்டது.",
+    "noTestimonials": "இன்னும் சான்றுகள் இல்லை.",
+    "galleryImage": "கேலரி படம்"
   }
+
 
 }
 
