--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -543,64 +543,65 @@
       "none": "வரவுள்ள எந்த நிகழ்வுகளும் இல்லை."
     }
   },
-
   "membership": {
-    "title": "உறுப்பினர் திட்டங்கள்",
-    "subtitle": "உங்களுக்கு பொருத்தமான திட்டத்தை தேர்ந்தெடுக்கவும்.",
+    "title": "உங்கள் உறுப்பினர் திட்டத்தை தேர்வுசெய்யவும்",
+    "subtitle": "உங்களுக்கே ஏற்ப சிறப்பான நன்மைகளை அனுபவிக்கவும்.",
+    "whyJoin": {
+      "title": "ஏன் இணைய வேண்டும்?",
+      "points": [
+        "சிறப்பு உள்ளடக்கம் மற்றும் நிகழ்வுகளுக்கான அணுகல்",
+        "சமூக திட்டங்களில் தள்ளுபடி",
+        "எங்கள் இலக்கை ஆதரிக்கவும், வளரவும் உதவுங்கள்"
+      ]
+    },
     "basic": {
       "title": "அடிப்படை",
-      "price": "₹800/மாதம்",
+      "price": "₹0 / மாதம்",
       "features": [
-        "ஆன்லைன் வளங்களை அணுகுதல்",
-        "மாத சந்தா செய்தி",
-        "சமூக ஆதரவு"
+        "இலவச உள்ளடக்கத்திற்கு அணுகல்",
+        "மாதாந்திர செய்திமடல்",
+        "சமூக மன்றம் அணுகல்"
       ]
     },
     "premium": {
       "title": "பிரீமியம்",
-      "price": "₹2000/மாதம்",
+      "price": "₹499 / மாதம்",
       "features": [
-        "அடிப்படையில் உள்ள அனைத்தும்",
-        "முன்னுரிமை மின்னஞ்சல் ஆதரவு",
-        "தனிப்பட்ட வெபினார்கள்"
+        "அடிப்படை உள்ள அனைத்தும்",
+        "நிகழ்வுகளுக்கான முன்னுரிமை அணுகல்",
+        "பிரீமியம் உள்ளடக்கம்"
       ]
     },
     "elite": {
       "title": "எலீட்",
-      "price": "₹4000/மாதம்",
+      "price": "₹999 / மாதம்",
       "features": [
-        "பிரீமியத்தில் உள்ள அனைத்தும்",
-        "தனிப்பட்ட வழிகாட்டல்",
-        "இலவச நிகழ்வு டிக்கெட்டுகள்"
+        "பிரீமியம் உள்ள அனைத்தும்",
+        "தனிப்பட்ட வழிகாட்டுதல்",
+        "எங்கள் இணையதளத்தில் மதிப்பீடு"
       ]
     },
-    "joinButton": "இப்போது சேரவும்",
-    "whyJoin": {
-      "title": "ஏன் எங்களைச் சேர வேண்டும்?",
-      "points": [
-        "சம விருப்பங்களை கொண்டவர்களுடன் இணைக",
-        "நிபுணர் அமர்வுகள் மூலம் உங்கள் திறன்களை வளர்க்கவும்",
-        "ஒரு உற்சாகமான சமூகத்தில் இருங்கள்"
-      ]
-    },
+    "joinButton": "இப்போது இணையுங்கள்",
     "cta": {
       "title": "உங்கள் பயணத்தை உயர்த்த தயாரா?",
-      "subtitle": "இப்போது பதிவு செய்யவும் மற்றும் எங்கள் சமூகத்தின் ஒரு பகுதியாக இருங்கள்.",
-      "button": "தொடங்கு"
+      "subtitle": "இப்போது உறுப்பினராகி ஒரு மாற்றத்தை ஏற்படுத்துங்கள்.",
+      "button": "தொடங்குங்கள்"
     }
   },
   "faq": {
     "title": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
-    "q1": "ஒவ்வொரு உறுப்பினர் நிலைக்கும் என்ன அடங்கும்?",
-    "a1": "ஒவ்வொரு நிலையும் அதன் பட்டியலின்படி கூடுதல் நன்மைகளை வழங்குகிறது.",
-    "q2": "நான் திட்டங்களை பின்னர் மாற்ற முடியுமா?",
-    "a2": "ஆம், நீங்கள் உங்கள் கணக்கு அமைப்புகளில் இருந்து எப்போது வேண்டுமானாலும் மேம்படுத்தவோ குறைப்பவோ முடியும்.",
-    "q3": "நீங்கள் பணத்தை திருப்பித் தருகிறீர்களா?",
-    "a3": "இணைந்த முதல் 7 நாட்களுக்குள் பணத்தை திருப்பி வழங்குகிறோம்."
+    "q1": "ஒவ்வொரு திட்டத்திலும் என்ன அடங்கும்?",
+    "a1": "ஒவ்வொரு திட்டமும் உங்கள் தேவைகளுக்கேற்ப அமைக்கப்பட்டுள்ளது. மேலே உள்ள விவரங்களைப் பாருங்கள்.",
+    "q2": "நான் எனது உறுப்பினரை ரத்து செய்ய முடியுமா?",
+    "a2": "ஆம், உங்கள் கணக்கு அமைப்புகளிலிருந்து எப்போது வேண்டுமானாலும் ரத்து செய்யலாம்.",
+    "q3": "பின்னர் மேம்படுத்த முடியுமா?",
+    "a3": "ஆம், உங்கள் சுயவிவரத்தில் புதிய திட்டத்தை தேர்வுசெய்து எளிதாக மேம்படுத்தலாம்."
   },
   "testimonials": {
-    "title": "எங்கள் சமூகத்தின் குரல்"
+    "title": "எங்கள் சமூகத்தின் குரல்",
+    "none": "தற்சமயம் கருத்துகள் எதுவும் இல்லை."
   },
+
   "dashboard": {
     "logout": "வெளியேறு",
     "postBlog": "பதிவை இடு",
