--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -637,10 +637,16 @@
     "testimonialDeleted": "கருத்து நீக்கப்பட்டது.",
     "noTestimonials": "இன்னும் சான்றுகள் இல்லை.",
     "galleryImage": "கேலரி படம்"
+  },
+  "gallery1": {
+    "title": "காட்சிப்பதிவு",
+    "loading": "காட்சிப்பதிவு ஏற்றப்படுகிறது...",
+    "loadError": "காட்சிப்பதிவை ஏற்ற முடியவில்லை.",
+    "empty": "காட்சிப்பதிவில் படங்கள் இல்லை.",
+    "noImage": "படம் இல்லை"
   }
-
-
 }
+
 
 
 
