--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -644,6 +644,13 @@
     "loadError": "காட்சிப்பதிவை ஏற்ற முடியவில்லை.",
     "empty": "காட்சிப்பதிவில் படங்கள் இல்லை.",
     "noImage": "படம் இல்லை"
+  },
+  "blogs": {
+    "title": "சமீபத்திய வலைப்பதிவுகள்",
+    "loading": "வலைப்பதிவுகள் ஏற்றப்படுகிறது...",
+    "empty": "வலைப்பதிவுகள் இல்லை.",
+    "untitled": "தலைப்பு இல்லை",
+    "noContent": "உள்ளடக்கம் இல்லை."
   }
 }
 
