--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -252,8 +252,8 @@
     "contact": {
       "heading": "Contact",
       "email": "Email: inspiringilango@gmail.com",
-      "phone": "Phone: +91 9551065656",
-      "location": "Location: No: 16 600042, 12, Srinivasa Nagar 2nd St, Ram Nagar, Devi Karumariamman Nagar, Mohanpuri, Velachery, Chennai, Tamil Nadu 600042"
+      "phone": "Phone: +91 9941704167",
+      "location": "Location: No: 12, Srinivasa Nagar 2nd St, Ram Nagar, Mohanpuri, Velachery, Chennai, Tamil Nadu 600042"
     }
   },
   "viif": {
@@ -396,7 +396,7 @@
       ]
     },
     "facts": {
-      "heading": "9 Inspiring Facts About Dr. Ilango",
+      "heading": "9 Inspiring Facts About Dr. Inspiring Ilango",
       "items": [
         "🌍 Has inspired over 500,000+ students worldwide.",
         "🎤 Self-trained motivational speaker and singer.",
