--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -129,7 +129,7 @@
       "heading": "தொடர்பு கொள்ள",
       "email": "மின்னஞ்சல்: inspiringilango@gmail.com",
       "phone": "தொலைபேசி: +91 9941704167",
-      "location": "இடம்: எண்: 16, 600042, 12, ஸ்ரீநிவாச நகர் 2வது வீதி, ராம் நகர், தேவி கருமாரியம்மன் நகர், மோகன்புரி, வேளச்சேரி, சென்னை, தமிழ்நாடு 600042"
+      "location": "இடம்: எண்:12, ஸ்ரீநிவாச நகர் 2வது வீதி, ராம் நகர், மோகன்புரி, வேளச்சேரி, சென்னை, தமிழ்நாடு 600042"
     }
   },
   "ace": {
@@ -375,7 +375,7 @@
       ]
     },
     "facts": {
-      "heading": "டாக்டர் இலங்கோ பற்றி 9 உண்மைகள்",
+      "heading": "டாக்டர் இன்ஸ்பையரிங் இலங்கோ பற்றி 9 உண்மைகள்",
       "items": [
         "🌍 உலகம் முழுவதும் 500,000+ மாணவர்களை ஊக்குவித்துள்ளார்.",
         "🎤 சுயமாக பயிற்சி பெற்ற ஊக்குவிப்பு பேச்சாளர் மற்றும் பாடகர்.",
